5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1596_2049.log
== TEST (2019-03-26 18:36:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_mchael - 1/3 -* qtd_litros
a - round (quantidade_de michael,   3)
-- ERROR:
File "XXXX", line 6
    qtd_de_mchael - 1/3 -* qtd_litros
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_mchael - 1/3 - * qtd_litros
a - round (quantidade_de michael,   3)
-- ERROR:
File "XXXX", line 6
    qtd_de_mchael - 1/3 - * qtd_litros
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_mchael - 1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
-- ERROR:
File "XXXX", line 6
    qtd_de_mchael - 1/3 - * qtd_litros
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_mchael - 1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 6
    qtd_de_mchael - 1/3 - * qtd_litros
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_michael - 1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 6
    qtd_de_michael - 1/3 - * qtd_litros
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_michael - 1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 6
    qtd_de_michael - 1/3 - * qtd_litros
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - input()
qtd_de_michael - 1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 6
    qtd_de_michael - 1/3 - * qtd_litros
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 6
    qtd_de_michael - 1/3 - * qtd_litros
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael-1/3 - * qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 6
    qtd_de_michael-1/3 - * qtd_litros
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael-1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael-1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael-1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael-1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael- 1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
